--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["628999625005@s.whatsapp.net","628999625005@s.whatsapp.net"],
+    "ownerName": "Aldi",
+    "instagram" : "https://instagram.com/aldii_260",
+    "botName": "Aldi Bot",
+    "footer": "Aldi Bot",
     "sessionName": "session",
-    "pathimg": "./media/Haruka.jpg",
+    "pathimg": "./media/cheemspic.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
