--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "ownerName": "Aldi",
     "instagram" : "https://instagram.com/aldii_260",
     "botName": "Aldi Bot",
-    "footer": "api.zeeoneofc.xyz",
+    "footer": "Aldi Bot",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
