--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "botName": "Aldi Bot",
     "footer": "Aldi Bot",
     "sessionName": "session",
-    "pathimg": "./media/Haruka.jpg",
+    "pathimg": "./media/cheemspic.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
