--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "ownerNumber": ["628999625005@s.whatsapp.net"],
+    "ownerNumber": ["628999625005@s.whatsapp.net","628999625005@s.whatsapp.net"],
     "ownerName": "Aldi",
     "instagram" : "https://instagram.com/aldii_260",
     "botName": "Aldi Bot",
